Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    \n",
+    "    output = 0\n",
     "    for term in list_of_terms:\n",
     "        term_output(term, x_value)\n",
     "    "
