--- a/index.ipynb
+++ b/index.ipynb
@@ -2261,7 +2261,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    first = output_at(list_of_terms,)"
+    "    first = output_at(list_of_terms, x_val)"
    ]
   },
   {
