Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3283,7 +3283,8 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    num = delta_f(list_of_terms,)"
+    "    num = delta_f(list_of_terms, x_value, delta_x)\n",
+    "    re"
    ]
   },
   {
