Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3284,7 +3284,8 @@
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    num = delta_f(list_of_terms, x_value, delta_x)\n",
-    "    re"
+    "    \n",
+    "    return num/den"
    ]
   },
   {
